[WNC-52] fix middleware RSA
