# internal/controller/http/v1/partner_bank_handler.go
@@ -1,7 +1,7 @@
 package v1
 
 import (
-	"fmt"
+	"github.com/21CLC01-WNC-Banking/WNC-Banking-BE/internal/controller/http/middleware"
 	"github.com/21CLC01-WNC-Banking/WNC-Banking-BE/internal/domain/entity"
 	httpcommon "github.com/21CLC01-WNC-Banking/WNC-Banking-BE/internal/domain/http_common"
 	"github.com/21CLC01-WNC-Banking/WNC-Banking-BE/internal/domain/model"
@@ -14,16 +14,19 @@ type PartnerBankHandler struct {
 	accountService     service.AccountService
 	transactionService service.TransactionService
 	partnerBankService service.PartnerBankService
+	middlewareRSA      *middleware.RSAMiddleware
 }
 
 func NewPartnerBankHandler(
 	accountService service.AccountService,
 	transactionService service.TransactionService,
-	partnerBankService service.PartnerBankService) *PartnerBankHandler {
+	partnerBankService service.PartnerBankService,
+	middlewareRSA *middleware.RSAMiddleware) *PartnerBankHandler {
 	return &PartnerBankHandler{
 		accountService:     accountService,
 		transactionService: transactionService,
-		partnerBankService: partnerBankService}
+		partnerBankService: partnerBankService,
+		middlewareRSA:      middlewareRSA}
 }
 
 // @Summary Get account name
@@ -85,38 +88,21 @@ func (handler *PartnerBankHandler) GetListPartnerBank(c *gin.Context) {
 	c.JSON(http.StatusOK, httpcommon.NewSuccessResponse[[]entity.PartnerBank](&listBank))
 }
 
+// @Summary Partner bank
+// @Description receive external transfer from partner banks
+// @Tags Partner bank
+// @Accept json
+// @Produce  json
+// @Router /partner-bank/external-transfer-rsa [POST]
+// @Success 200 {object} httpcommon.HttpResponse[model.ExternalTransactionResponse]
+// @Failure 400 {object} httpcommon.HttpResponse[any]
+// @Failure 500 {object} httpcommon.HttpResponse[any]
 func (handler *PartnerBankHandler) ReceiveExternalTransfer(c *gin.Context) {
 	req, _ := c.Get("request")
 	externalTransaction := req.(model.ExternalTransactionRequest)
-	//check account number
-	if externalTransaction.SrcAccountNumber == externalTransaction.DesAccountNumber {
-		c.AbortWithStatusJSON(http.StatusBadRequest, httpcommon.NewErrorResponse(
-			httpcommon.Error{
-				Message: "thông tin gói không chính xác hoặc bị chỉnh sửa",
-				Code:    httpcommon.ErrorResponseCode.InvalidRequest,
-				Field:   "srcAccountNumber",
-			}))
-		return
-	}
-	//check src account number in our bank
-	account, _ := handler.accountService.GetCustomerByAccountNumber(c, externalTransaction.SrcAccountNumber)
-	if account != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, httpcommon.NewErrorResponse(
-			httpcommon.Error{
-				Message: "tài khoản nguồn đã tồn tại trong ngân hàng",
-				Code:    httpcommon.ErrorResponseCode.InvalidRequest,
-				Field:   "srcAccountNumber",
-			}))
-		return
-	}
-	//check src account number in partner bank
+
 	partnerBankId, _ := c.Get("partnerBankId")
-	/*
-		check when we have api
-	*/
 	//save
-	fmt.Println(partnerBankId)
-	fmt.Print(externalTransaction)
 	err := handler.transactionService.ReceiveExternalTransfer(c, externalTransaction, partnerBankId.(int64))
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusInternalServerError, httpcommon.NewErrorResponse(
@@ -128,5 +114,17 @@ func (handler *PartnerBankHandler) ReceiveExternalTransfer(c *gin.Context) {
 		return
 	}
 	//encode response
-	c.AbortWithStatus(200)
+	responseString := "transfer success"
+	signedResponse, err := handler.middlewareRSA.SignDataRSA(responseString)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusInternalServerError, httpcommon.NewErrorResponse(
+			httpcommon.Error{
+				Message: err.Error(),
+				Code:    httpcommon.ErrorResponseCode.InternalServerError,
+				Field:   "",
+			}))
+		return
+	}
+	c.JSON(http.StatusOK, httpcommon.NewSuccessResponse[model.ExternalTransactionResponse](&model.ExternalTransactionResponse{
+		Data: responseString, SignedData: signedResponse}))
 }
