# internal/domain/model/transfer.go
@@ -1,5 +1,7 @@
 package model
 
+import "time"
+
 type PreInternalTransferRequest struct {
 	SourceAccountNumber string `json:"sourceAccountNumber" binding:"required"`
 	TargetAccountNumber string `json:"targetAccountNumber" binding:"required"`
@@ -19,26 +21,29 @@ type PreDebtTransferRequest struct {
 }
 
 type ExternalTransactionRequest struct {
-	SrcAccountNumber string `json:"srcAccountNumber" binding:"required"`
-	SrcBankCode      string `json:"srcBankCode" binding:"required"`
-	DesAccountNumber string `json:"desAccountNumber" binding:"required"`
-	Amount           int64  `json:"amount" binding:"required,min=0"`
-	Description      string `json:"description" binding:"required"`
-	IsSourceFee      *bool  `json:"isSourceFee" binding:"required"`
+	SrcAccountNumber string    `json:"srcAccountNumber" binding:"required"`
+	SrcBankCode      string    `json:"srcBankCode" binding:"required"`
+	DesAccountNumber string    `json:"desAccountNumber" binding:"required"`
+	Amount           int64     `json:"amount" binding:"required,min=0"`
+	Description      string    `json:"description" binding:"required"`
+	IsSourceFee      *bool     `json:"isSourceFee" binding:"required"`
+	Exp              time.Time `json:"exp" binding:"required"`
 }
 
 type ExternalTransactionData struct {
-	SrcAccountNumber string `json:"srcAccountNumber" binding:"required"`
-	SrcBankCode      string `json:"srcBankCode" binding:"required"`
-	DesAccountNumber string `json:"desAccountNumber" binding:"required"`
-	Amount           int64  `json:"amount" binding:"required,min=0"`
-	Description      string `json:"description" binding:"required"`
-	IsSourceFee      *bool  `json:"isSourceFee" binding:"required"`
-	SignedData       string `json:"signedData" binding:"required"`
+	SrcAccountNumber string    `json:"srcAccountNumber" binding:"required"`
+	SrcBankCode      string    `json:"srcBankCode" binding:"required"`
+	DesAccountNumber string    `json:"desAccountNumber" binding:"required"`
+	Amount           int64     `json:"amount" binding:"required,min=0"`
+	Description      string    `json:"description" binding:"required"`
+	IsSourceFee      *bool     `json:"isSourceFee" binding:"required"`
+	Exp              time.Time `json:"exp" binding:"required"`
+	SignedData       string    `json:"signedData" binding:"required"`
 }
 
 type ExternalTransactionResponse struct {
-	Reply string `json:"reply"`
+	Data       string `json:"data"`
+	SignedData string `json:"signedData"`
 }
 
 type PreExternalTransferRequest struct {
